fix uneven height of img div : specify height of pics in center and bottom

--- a/Week-3/task-3/style.css
+++ b/Week-3/task-3/style.css
@@ -103,6 +103,7 @@ body {
     display: block;
     width: 100%;
     max-width: 100%;
+    height: 200px;
     object-fit: cover;
 }
 
